Revert "Revert "removed expansive alt-text from unrealiable request to avoid changing the layout too much""
This reverts commit ae5fdb1dfcdf0f47a68a489f772d5a23ce4a6d7a.

--- a/resources/assets/sass/print.scss
+++ b/resources/assets/sass/print.scss
@@ -22,10 +22,12 @@
     }
 
     section {
-        margin-top: 0;
-        position: static;
+        position: static !important;
+        margin: 0;
+        padding: 0;
         left: 0;
         top: 0;
+        padding: 0;
     }
 
     #print_instructions {
